--- a/Instructor/package.json
+++ b/Instructor/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
+    "@mui/styled-engine-sc": "^6.3.1",
+    "@mui/x-charts": "^7.23.2",
     "@reduxjs/toolkit": "^2.4.0",
     "cra-template": "1.2.0",
     "eslint": "^8.57.1",
@@ -13,7 +18,8 @@
     "react-redux": "^9.1.2",
     "react-router": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "styled-components": "^6.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
